# hack-n-roll-2026

./: .env.example  .gitignore  CODE_ARCADE_README.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  UI_GUIDE.md  demo.sh  package.json  start.sh
src/: app.rs  audio.rs  languages.rs  llm.rs  main.rs  problem.rs  syntax.rs
