[package]
name = "code_arcade"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3"
dotenvy = "0.15"
